[gd_scene load_steps=6 format=3 uid="uid://dqm1wdopgkdkp"]

[ext_resource type="Script" uid="uid://gj2kvs6p5asi" path="res://Scenes/Execution.gd" id="1_rwjih"]
[ext_resource type="Shortcut" uid="uid://d0olqx0bjlhp1" path="res://Nodes/GUI/ExitShortcut.tres" id="2_qbdqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6oq72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsvn6"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ykpnb"]
color = Color(1, 1, 1, 1)
grow_begin = -50.0
grow_end = -50.0
thickness = 2

[node name="Execution" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_rwjih")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delay" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Starting in %d seconds.
Press Escape to cancel."
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/Delay"]
layout_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oq72")
shortcut = ExtResource("2_qbdqm")

[node name="ErrorsParent" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsvn6")

[node name="Errors" type="VBoxContainer" parent="VBoxContainer/ErrorsParent"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ErrorsParent/Errors"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "Some tasks are invalid!"
horizontal_alignment = 1

[node name="CommandsContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator" type="HSeparator" parent="VBoxContainer/CommandsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_ykpnb")

[node name="Time" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Finished. Total time: %02d:%02d:%02d."
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
shortcut = ExtResource("2_qbdqm")
shortcut_in_tooltip = false
text = "< Back"

[node name="TaskLimbo" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="VBoxContainer/Delay/Button" to="." method="go_back"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="go_back"]
